fix: navbar con margenes y fix collapse

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -66,8 +66,8 @@ footer {
   text-align: center;
 }
 .logo {
-  width: 7rem;
-  height: 7rem;
+  width: 9rem;
+  height: 9rem;
 }
 .icons a {
   display: flex;
@@ -112,4 +112,11 @@ li .nav-link{
 .carta {
   width: 100%;
   object-fit: cover;
+}
+
+.snau {
+    height: 50rem;
+    width: 100%;
+    object-fit: cover;
+    object-position: top;
 }
